Added more wording to h1.

--- a/site/index.html
+++ b/site/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 <h1>
-Hello Coursera! It is a very confusing course. </h1>
+Hello Coursera! It is a very confusing course, but I'm getting used to it. </h1>
 </body>
 </html>
